--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,42 +1,39 @@
 .home-header {
-    position: relative;
-    height: 100vh;
-    overflow: hidden;
-  }
-  
-  .background-video {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-  }
-  
-  .overlay {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-  }
-  
+  position: relative;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: white;
+}
+
+.background-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+}
+
+.overlay {
+  z-index: 1;
+}
+
+.cv-button {
+  padding: 25px;
+}
+.cv-button a {
+  color: black;
+  font-size: 19px;
+  text-decoration: none;
+  border-radius: 5px;
+}
+
+@media (min-width: 600px) {
   .logo {
-    width: 200px;
-    margin-bottom: 20px;
+    max-width: 200px;
   }
-  
-  .cv-button {
-    background-color: rgba(255, 255, 255, 0.7);
-    border: none;
-    padding: 10px 20px;
-    font-size: 18px;
-    cursor: pointer;
-  }
-  
-  .cv-button a {
-    text-decoration: none;
-    color: #000;
-  }
-  
+}
