--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,28 +1,38 @@
 .navbar {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px 20px;
-    background-color: rgba(0, 0, 0, 0.7);
-    position: fixed;
-    width: 100%;
-    top: 0;
-    z-index: 100;
-  }
-  
-  .navbar-logo {
-    width: 100px;
-  }
-  
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 150px; /* Adjusted height */
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 0 2rem; /* Added horizontal padding */
+  background-color: rgba(211, 211, 211, 0.36); /* Dark gray with 80% opacity */
+  z-index: 10; /* Ensure it's above the video */
+}
+
+.navbar-logo {
+  /* max-width: 100px; */
+  height: 120px; /* Adjusted height */
+}
+
+.nav-links {
+  display: none;
+}
+
+@media (min-width: 600px) {
   .nav-links {
-    list-style: none;
     display: flex;
-    gap: 20px;
+    list-style: none;
   }
-  
-  .nav-links li a {
+
+  .nav-links li {
+    margin: 0 1rem;
+  }
+
+  .nav-links a {
+    color: black;
     text-decoration: none;
-    color: #fff;
-    font-size: 18px;
   }
-  
+}
