--- a/src/components/Nosotros.css
+++ b/src/components/Nosotros.css
@@ -1,46 +1,63 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 .nosotros {
   padding: 2rem 1rem;
   background-color: #333; /* Adjust background color if necessary */
-  color: #fff; /* Adjust text color if necessary */
+  color: #ccc; /* Adjust text color if necessary */
+  font-family: 'Roboto', sans-serif; /* Updated font */
 }
-
+.bold-color{
+    color: #fff;
+}
 .container {
-
-  max-width: 800px;
-  margin: 150px auto;
+  max-width: 1000px;
+  margin: 85px auto;
 }
 
 .heading {
-  font-size: 2rem;
-  font-weight: bold;
+  font-size: 4rem;
+  font-weight: 500;
   text-align: center;
   margin-bottom: 1rem;
+  color: #fff;
 }
 
+.heading-container {
+    display: flex;
+    justify-content: start;
+    /* max-width: 900px; */
+}
+article {
+    padding: 2rem;
+}
 .quote {
-  font-style: italic;
-  text-align: center;
   margin-bottom: 2rem;
+  font-size: 1.2rem; /* Slightly larger font size */
+  color: #bbb; /* Light gray for quote */
 }
 
 p {
   font-size: 1rem;
-  line-height: 1.5;
+  line-height: 1.8;
   margin-bottom: 1rem;
+  text-align: justify;
 }
 
 .semblanzas-button {
   display: block;
-  margin: 2rem auto;
-  padding: 0.5rem 1rem;
-  background-color: #ff6f61; /* Adjust button color if necessary */
+  margin: auto 0 2rem auto;
+  padding: 0.7rem 1.5rem;
+  background-color: rgb(254 97 97);
   color: #fff;
   border: none;
-  border-radius: 5px;
+  border-radius: 18px;
   font-size: 1rem;
+  font-weight: 700;
+  font-family: "ulo-clean-w01-one-bold", sans-serif;
   cursor: pointer;
   text-align: center;
   text-decoration: none;
+  text-transform: uppercase;
 }
 
 .semblanzas-button:hover {
