--- a/src/components/Contact.module.css
+++ b/src/components/Contact.module.css
@@ -6,7 +6,7 @@
   background-color: transparent; /*  Light gray background */
   background-image: url('../assets/contact-background.png');
   font-family: 'Roboto', sans-serif;
-  margin-top: 60px;
+  /* margin-top: 60px; */
   font-size: medium;
 }
 
