--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,20 +1,23 @@
 .navbar {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 150px; /* Adjusted height */
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
-  padding: 0 2rem; /* Added horizontal padding */
-  background-color: rgba(211, 211, 211, 0.36); /* Dark gray with 80% opacity */
+  padding: 1rem;
+  background-color: rgba(211, 211, 211, 0.36); /* Light gray with 80% opacity */
+  width: 100%;
   z-index: 10; /* Ensure it's above the video */
+  position: absolute;
+}
+
+.hamburger {
+  display: none;
+  font-size: 4rem;
+  cursor: pointer;
+  /* color: #ffffff; */
 }
 
 .navbar-logo {
-  /* max-width: 100px; */
-  height: 120px; /* Adjusted height */
+  height: 70px; /* Adjusted height */
 }
 
 .nav-links {
@@ -22,9 +25,14 @@
 }
 
 @media (min-width: 600px) {
+  .navbar-logo {
+    height: 120px;
+  }
+
   .nav-links {
     display: flex;
     list-style: none;
+    text-decoration: none;
   }
 
   .nav-links li {
@@ -34,5 +42,52 @@
   .nav-links a {
     color: black;
     text-decoration: none;
+  }
+}
+
+@media (max-width: 768px) {
+  .hamburger {
+    display: block;
+    
+  }
+
+  .navbar-links {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: hsl(0, 0%, 16%);
+    width: 100%;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    z-index: 10;
+    list-style: none;
+  }
+  .nav-links a {
+    color: white;
+    text-decoration: none;
+  }
+
+  .navbar-links.open {
+    display: flex;
+    
+  }
+
+  .mobile-overlay {
+    display: none;
+  }
+
+  .mobile-overlay.open {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 9;
   }
 }
