--- a/src/components/Semblanzas.module.css
+++ b/src/components/Semblanzas.module.css
@@ -1,52 +1,92 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@200;700&display=swap');
 
 .semblanzas {
-  padding: 4rem 1rem;
+  padding: 3rem 1rem;
   background-image: url(../assets/contact-background.png);
   font-family: 'Roboto', sans-serif;
 }
 
 .container {
-  max-width: 800px;
+  max-width: 900px;
   margin: 80px auto;
-  padding: 2rem;
+  padding: 1rem;
   /* background-color: #fff; */
   /* border-radius: 10px; */
   /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
 }
 
 .heading {
-  font-size: 2.5rem;
-  font-weight: 700;
+  font-size: 2rem;
+  font-weight: 200;
   text-align: center;
-  margin-bottom: 2rem;
+  font-family: 'Times New Roman', Times, serif;
+  background-color: rgb(230 222 202);
+  max-width: 80%;
+  margin: 3rem auto 3rem 15%;
+  border-radius: 15px 0 15px 0;
+  padding: 35px;
 }
 
 .profile {
   display: flex;
   margin-bottom: 2rem;
+  flex-direction: column;
+  /* align-items: center; */
 }
 
 .profileImage {
-  width: 100px;
-  height: 100px;
+  width: 250px;
+  height: 250px;
+  margin: auto;
   border-radius: 50%;
-  margin-right: 1rem;
 }
 
 .profileDetails {
   flex: 1;
+  font-family: Helvetica, sans-serif;
+  margin: 2rem;
 }
 
 .profileDetails h2 {
-  margin: 0 0 0.5rem;
+  /* margin: 0 0 0.5rem; */
+  font-weight: 200;
 }
 
 .cityYear {
-  color: #d9534f; /* Bootstrap red color */
-  font-weight: bold;
+  color: #A2230A; 
+  font-family: garamond;
+  margin-bottom: 1rem;
 }
 
-.profileDetails p {
+/* .profileDetails p {
   margin: 0;
-}
+} */
+
+@media (min-width: 768px) {
+    .profile {
+      flex-direction: row;
+      text-align: left;
+    }
+
+    .profileImage {
+        margin-top: 1rem;
+        margin-left: auto;
+        margin-right: auto;
+        /* margin-bottom: 0; */
+        width: 150px;
+        height: 150px;
+      }
+  
+    
+      /* .profile:nth-child(even) .profileImage {
+        order: 2;
+        margin-right: 0;
+        margin-left: 2rem;
+      } */
+    
+      .profileDetails {
+        flex: 1;
+      }
+
+      
+    }
