--- a/src/components/Nosotros.css
+++ b/src/components/Nosotros.css
@@ -4,7 +4,7 @@
   padding: 2rem 1rem;
   background-color: #333; /* Adjust background color if necessary */
   color: #ccc; /* Adjust text color if necessary */
-  font-family: 'Roboto', sans-serif; /* Updated font */
+  font-family: 'roboto-thin', sans-serif; /* Updated font */
 }
 .bold-color{
     color: #fff;
@@ -20,6 +20,7 @@
   text-align: center;
   margin-bottom: 1rem;
   color: #fff;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .heading-container {
@@ -29,9 +30,11 @@
 }
 article {
     padding: 2rem;
+    padding-top: 0;
 }
 .quote {
   margin-bottom: 2rem;
+  margin-top: 0;
   font-size: 1.2rem; /* Slightly larger font size */
   color: #bbb; /* Light gray for quote */
 }
